fix static urls

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -4,6 +4,7 @@ APP_ENV=local
 APP_KEY=base64:pnA4gzGLECMrHg2YaL3nxTXD4+yWnB9mOK7X6jzBHSE=
 APP_DEBUG=true
 APP_URL=https://app.tokenwiz.xyz
+APP_DIR=D:/Account/Projects/BigChainDB/bcdb-robotbulls-laravel/public/
 FORCE_HTTPS=false
 
 ACCOUNT_SID=
