add BigChainORM into project

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -55,3 +55,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 TRNX_PREFIX=TNX
 USER_PREFIX=UD
 ADDED_PREFIX=SYS
+
+BIGCHAINDB_DRIVER=http://88.119.168.103:2466/
