update env examples

--- a/.env.prod.example
+++ b/.env.prod.example
@@ -1,9 +1,10 @@
-APP_NAME=TokenLite
-APP_VERSION='1.0.3'
+APP_NAME='TokenLite'
+APP_VERSION='1.1.7'
 APP_ENV=local
-APP_KEY=base64:pnA4gzGLECMrHg2YaL3nxTXD4+yWnB9mOK7X6jzBHSE=
+APP_KEY=base64:s32mhgsKxBVQh+0Zn9zhINQmMs54fgfJYxA98cbzPLg=
 APP_DEBUG=true
-APP_URL=https://app.tokenwiz.xyz
+APP_LOG_LEVEL=debug
+APP_URL=https://ow98ozu66ol5vc-2466.proxy.runpod.net/
 APP_DIR=./bcdb-robotbulls-laravel/public/
 FORCE_HTTPS=false
 
@@ -56,4 +57,4 @@ TRNX_PREFIX=TNX
 USER_PREFIX=UD
 ADDED_PREFIX=SYS
 
-BIGCHAINDB_DRIVER=http://88.119.168.103:2466/
+BIGCHAINDB_DRIVER=http://localhost:2466/
